--- a/ch08/cards.cabal
+++ b/ch08/cards.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.36.0.
+-- This file has been generated from package.yaml by hpack version 0.37.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -24,6 +24,10 @@ source-repository head
   location: https://github.com/githubuser/cards
 
 library
+  exposed-modules:
+      Cards
+      GameFloor
+      IOFloor
   other-modules:
       Paths_cards
   autogen-modules:
@@ -59,6 +63,7 @@ test-suite cards-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Gen
       Paths_cards
   autogen-modules:
       Paths_cards
