--- a/ch08/stack.yaml
+++ b/ch08/stack.yaml
@@ -8,9 +8,9 @@
 # A snapshot resolver dictates the compiler version and the set of packages
 # to be used for project dependencies. For example:
 #
-# resolver: lts-21.25
+resolver: lts-21.25
 # resolver: nightly-2024-05-06
-resolver: ghc-9.6.5
+# resolver: ghc-9.6.5
 #
 # The location of a snapshot can be provided as a file or url. Stack assumes
 # a snapshot provided as a file might change, whereas a url resource does not.
@@ -39,9 +39,7 @@ packages:
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
 extra-deps: 
-  - random-1.2.1.2
-  - splitmix-0.1.0.5
-
+  
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
