--- a/ch09/package.yaml
+++ b/ch09/package.yaml
@@ -49,7 +49,7 @@ library:
   source-dirs: src
 
 executables:
-  ch09-exe:
+  bot:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
