--- a/ch09/ch09.cabal
+++ b/ch09/ch09.cabal
@@ -52,7 +52,7 @@ library
     , text
   default-language: Haskell2010
 
-executable ch09-exe
+executable bot
   main-is: Main.hs
   other-modules:
       Paths_ch09
