--- a/ch10/.env.template
+++ b/ch10/.env.template
@@ -4,3 +4,4 @@ OPENAI_TOKEN=
 OPENAI_URL_CHAT=https://api.openai.com/v1/chat/completions
 OPENAI_URL_MODELS=https://api.openai.com/v1/models
 
+LOG_LEVEL=DEBUG
