--- a/ch11/jarvis.cabal
+++ b/ch11/jarvis.cabal
@@ -31,6 +31,7 @@ library
       LLM.OpenAI
       Middleware
       StackTypes
+      Util.Formatting
       Util.Logger
       Util.PrettyPrinting
   other-modules:
@@ -44,6 +45,7 @@ library
       aeson
     , base >=4.7 && <5
     , bytestring
+    , cmark
     , conduit
     , conduit-combinators
     , dotenv
@@ -54,6 +56,7 @@ library
     , http-conduit
     , http-types
     , mtl
+    , skylighting
     , split
     , text
   default-language: Haskell2010
@@ -71,6 +74,7 @@ executable jarvis
       aeson
     , base >=4.7 && <5
     , bytestring
+    , cmark
     , conduit
     , conduit-combinators
     , dotenv
@@ -82,6 +86,7 @@ executable jarvis
     , http-types
     , jarvis
     , mtl
+    , skylighting
     , split
     , text
   default-language: Haskell2010
@@ -100,6 +105,7 @@ test-suite ch10-test
       aeson
     , base >=4.7 && <5
     , bytestring
+    , cmark
     , conduit
     , conduit-combinators
     , dotenv
@@ -111,6 +117,7 @@ test-suite ch10-test
     , http-types
     , jarvis
     , mtl
+    , skylighting
     , split
     , text
   default-language: Haskell2010
