added embeddings calling

--- a/ch11/.env.template
+++ b/ch11/.env.template
@@ -3,5 +3,6 @@ OPENAI_TOKEN=
 
 OPENAI_URL_CHAT=https://api.openai.com/v1/chat/completions
 OPENAI_URL_MODELS=https://api.openai.com/v1/models
+OPENAI_URL_EMBEDDINGS=https://api.openai.com/v1/embeddings
 
 LOG_LEVEL=DEBUG
