--- a/ch11/jarvis.cabal
+++ b/ch11/jarvis.cabal
@@ -34,6 +34,8 @@ library
       Util.Formatting
       Util.Logger
       Util.PrettyPrinting
+      VectorStorage.InMemory
+      WebAPI.WebApp
   other-modules:
       Paths_jarvis
   autogen-modules:
@@ -55,11 +57,15 @@ library
     , http-client-tls
     , http-conduit
     , http-types
+    , jwt
     , mtl
+    , scotty
     , skylighting
     , split
     , text
     , vector
+    , wai
+    , warp
   default-language: Haskell2010
 
 executable jarvis
@@ -86,11 +92,50 @@ executable jarvis
     , http-conduit
     , http-types
     , jarvis
+    , jwt
     , mtl
+    , scotty
     , skylighting
     , split
     , text
     , vector
+    , wai
+    , warp
+  default-language: Haskell2010
+
+executable web
+  main-is: Main.hs
+  other-modules:
+      Paths_jarvis
+  autogen-modules:
+      Paths_jarvis
+  hs-source-dirs:
+      web
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      aeson
+    , base >=4.7 && <5
+    , bytestring
+    , cmark
+    , conduit
+    , conduit-combinators
+    , dotenv
+    , fast-logger
+    , haskeline
+    , http-client
+    , http-client-tls
+    , http-conduit
+    , http-types
+    , jarvis
+    , jwt
+    , mtl
+    , scotty
+    , skylighting
+    , split
+    , text
+    , vector
+    , wai
+    , warp
   default-language: Haskell2010
 
 test-suite ch10-test
@@ -118,9 +163,13 @@ test-suite ch10-test
     , http-conduit
     , http-types
     , jarvis
+    , jwt
     , mtl
+    , scotty
     , skylighting
     , split
     , text
     , vector
+    , wai
+    , warp
   default-language: Haskell2010
