in memory started

--- a/ch12-2/jarvis.cabal
+++ b/ch12-2/jarvis.cabal
@@ -31,7 +31,9 @@ library
       Init
       LLM.OpenAI
       Middleware
+      Misc.TypeFam
       Mongo.Core
+      Mongo.MongoRAG
       Mongo.SystemPrompts
       StackTypes
       Util.AesonBson
