--- a/ch12-2/jarvis.cabal
+++ b/ch12-2/jarvis.cabal
@@ -83,6 +83,7 @@ library
     , unliftio-core
     , unordered-containers
     , vector
+    , vector-algorithms
     , wai
     , warp
   default-language: Haskell2010
@@ -129,6 +130,7 @@ executable jarvis
     , unliftio-core
     , unordered-containers
     , vector
+    , vector-algorithms
     , wai
     , warp
   default-language: Haskell2010
@@ -176,6 +178,7 @@ test-suite ch10-test
     , unliftio-core
     , unordered-containers
     , vector
+    , vector-algorithms
     , wai
     , warp
   default-language: Haskell2010
