basic integrail api

--- a/ch13/jarvis.cabal
+++ b/ch13/jarvis.cabal
@@ -29,6 +29,7 @@ library
       Commands
       Control.Monad.MRWS
       Init
+      Integrail.API
       LLM.OpenAI
       Middleware
       MidMonad
