--- a/ch13/.env.template
+++ b/ch13/.env.template
@@ -1,6 +1,8 @@
 OPENAI_ORG=
 OPENAI_TOKEN=
 MAIN_MONGO_URI=
+INTEGRAIL_TOKEN=
+INTEGRAIL_API_URL=
 
 OPENAI_URL_CHAT=https://api.openai.com/v1/chat/completions
 OPENAI_URL_MODELS=https://api.openai.com/v1/models
