--- a/ch13/.env.template
+++ b/ch13/.env.template
@@ -2,8 +2,10 @@ OPENAI_ORG=
 OPENAI_TOKEN=
 MAIN_MONGO_URI=
 INTEGRAIL_TOKEN=
-INTEGRAIL_API_URL=
+INTEGRAIL_CLIENT_ID=
+INTEGRAIL_AGENTS=
 
+INTEGRAIL_API_URL=https://cloud.integrail.ai/api
 OPENAI_URL_CHAT=https://api.openai.com/v1/chat/completions
 OPENAI_URL_MODELS=https://api.openai.com/v1/models
 OPENAI_URL_EMBEDDINGS=https://api.openai.com/v1/embeddings
